# MCP_JobAutomation_FineTuned

./: .env.example  .gitignore  README.md  amplify.yml  pyproject.toml
.kiro/steering/: architecture.md
backend/: Dockerfile  README.md  handler.py  persistence.py  requirements.txt  storage.py
data/: model_pricing.yaml  personal_rules.yaml  skill_categories.yaml  story_bank.yaml
docs/: DEPLOYMENT.md  README.md
frontend/: .env.example  .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: login-form.tsx  page.tsx
frontend/app/runs/: page.tsx
frontend/app/submit/: logout-button.tsx  page.tsx  submit-form.tsx
frontend/components/: ats-card.tsx  eligibility-card.tsx  hero.tsx  how-it-works.tsx  jd-analysis-card.tsx  json-viewer.tsx  legend.tsx  metrics-table.tsx  outcome-badge.tsx  pipeline-graph.tsx  run-card.tsx  run-downloads.tsx  run-result-view.tsx  runs-stats.tsx  selected-stories-card.tsx  site-footer.tsx  site-header.tsx
frontend/components/ui/: alert.tsx  badge.tsx  card.tsx  label.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
frontend/data/sample-runs/: 01_applied_fde.json  02_blocked_clearance.json  (+1 more)
frontend/lib/: auth.ts  runs.ts  types.ts  utils.ts
infra/: .gitignore  README.md  cdk.json  package.json  tsconfig.json
infra/lib/: pipeline-stack.ts
scripts/: smoke_test.py
src/job_pipeline/: __init__.py  config.py  graph.py  instrumentation.py  llm.py  main.py
templates/: README.md
(+22 files in other folders)
