[project]
name = "job-pipeline"
version = "0.1.0"
description = "Agentic resume tailoring pipeline (LangGraph, Phase 1: orchestration)."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "langgraph>=0.2.50",
    "anthropic>=0.40.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-docx>=1.1",
    "docxtpl>=0.16",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
job-pipeline = "job_pipeline.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"job_pipeline" = ["py.typed"]
